tests/ui/type-alias-impl-trait/bounds-are-checked.stderr
warning: unnecessary lifetime parameter `'a`
  --> $DIR/bounds-are-checked.rs:8:6
   |
LL | fn f<'a: 'static>(t: &'a str) -> X<'a> {
   |      ^^
   |
   = help: you can use the `'static` lifetime directly, in place of `'a`

error: non-defining opaque type use in defining scope
  --> $DIR/bounds-are-checked.rs:10:5
   |
LL | type X<'a> = impl Into<&'static str> + From<&'a str>;
   |        -- cannot use static lifetime; use a bound lifetime instead or remove the lifetime parameter from the opaque type
...
LL |     t
   |     ^

error: aborting due to previous error; 1 warning emitted

